[gd_scene load_steps=13 format=3 uid="uid://d7w5brnj1hi1"]

[ext_resource type="Shader" path="res://scenes/menus/pause_menu/pause_menu.gdshader" id="1_x1dvp"]
[ext_resource type="Script" path="res://script/menus/game_menu/game_menu.gd" id="2_s06a2"]
[ext_resource type="PackedScene" uid="uid://cvqnwtk5nq0y6" path="res://scenes/menus/game_menu/items_menu.tscn" id="5_uwh7u"]
[ext_resource type="PackedScene" uid="uid://cnf48edckpp1a" path="res://scenes/menus/game_menu/characters_menu.tscn" id="6_rbgto"]
[ext_resource type="PackedScene" uid="uid://b36413u4v0whv" path="res://scenes/menus/game_menu/maps_menu.tscn" id="7_13826"]
[ext_resource type="Texture2D" uid="uid://db26xg7yncmgm" path="res://assets/menus/game menu/mascara.png" id="8_vb7a6"]
[ext_resource type="Texture2D" uid="uid://kvvlgvjmj6nl" path="res://assets/menus/game menu/libro_cerrado.png" id="13_0ww5u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tjfk"]
shader = ExtResource("1_x1dvp")
shader_parameter/lod = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n7btv"]
shader = ExtResource("1_x1dvp")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_wco05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kixgv"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.75]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qgg0e"]
_data = {
"RESET": SubResource("Animation_wco05"),
"blur": SubResource("Animation_kixgv")
}

[node name="game_menu" type="Control"]
process_mode = 3
material = SubResource("ShaderMaterial_3tjfk")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_s06a2")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_n7btv")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
offset_left = 405.0
offset_top = 202.0
offset_right = 856.0
offset_bottom = 538.0
scale = Vector2(2.5, 2.5)
pivot_offset = Vector2(42.4, 49.8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qgg0e")
}

[node name="selected_menu" type="Control" parent="."]
anchors_preset = 0

[node name="characters_menu" parent="selected_menu" instance=ExtResource("6_rbgto")]
offset_left = -75.0
offset_top = 56.0
offset_right = -75.0
offset_bottom = 56.0

[node name="maps_menu" parent="selected_menu" instance=ExtResource("7_13826")]
visible = false
offset_left = -116.0
offset_top = 20.0
offset_right = -116.0
offset_bottom = 20.0

[node name="items_menu" parent="selected_menu" instance=ExtResource("5_uwh7u")]
visible = false
offset_left = -140.0
offset_top = 38.0
offset_right = -140.0
offset_bottom = 38.0

[node name="default_menu" type="Control" parent="."]
anchors_preset = 0
offset_left = -20.0
offset_top = -24.0
offset_right = -20.0
offset_bottom = -24.0

[node name="LibroCerrado" type="Sprite2D" parent="default_menu"]
position = Vector2(897, 606)
texture = ExtResource("13_0ww5u")

[node name="characters_btn" type="TextureButton" parent="default_menu"]
layout_mode = 0
offset_left = 384.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 315.0
texture_hover = ExtResource("8_vb7a6")
stretch_mode = 0

[node name="maps_btn" type="TextureButton" parent="default_menu"]
layout_mode = 0
offset_left = 365.0
offset_top = 320.0
offset_right = 400.0
offset_bottom = 370.0
texture_hover = ExtResource("8_vb7a6")
stretch_mode = 0

[node name="items_btn" type="TextureButton" parent="default_menu"]
layout_mode = 0
offset_left = 375.0
offset_top = 375.0
offset_right = 410.0
offset_bottom = 425.0
texture_hover = ExtResource("8_vb7a6")
stretch_mode = 0

[connection signal="pressed" from="default_menu/characters_btn" to="." method="_on_characters_btn_pressed"]
[connection signal="pressed" from="default_menu/maps_btn" to="." method="_on_maps_btn_pressed"]
[connection signal="pressed" from="default_menu/items_btn" to="." method="_on_items_btn_pressed"]
